[package]
name = "p2pchat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
data-encoding = "2.7.0"
futures-lite = "2.6.0"
iroh = "0.32.0"
iroh-gossip = "0.32.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
